added flex-basis of item-products of desktop layout

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
               </button>
             </form> 
     <!-- ДАЛЫ ФОРМА-ПОШУК ТОВАРЫВ -->
-    <!-- <div class="main-feedback">
+    <div class="main-feedback">
               <button type="button" class="icon-large icon-button">
                 <svg class="icon-phone">
                   <use href="./images/sprite.svg#telephone"></use>
@@ -222,7 +222,7 @@
         </div>
       </nav>
     </header>
-    <main> -->
+    <main> 
     <!-- ГЕРОЙ -->
     <!-- <section class="section slider">
         <div class="container">
