changed title-wrapper and section-title

--- a/index.html
+++ b/index.html
@@ -224,13 +224,13 @@
     </header>
     <main> 
     <!-- ГЕРОЙ -->
-    <!-- <section class="section slider">
+     <section class="section slider">
         <div class="container">
           <h1 class="visually-hidden">Ліжко хюпер</h1>
           <div class="wrapper-slider">
-            <picture> -->
+            <picture> 
     <!-- desttop  -->
-    <!-- <source
+    <source
                 media="(min-width:1320px)"
                 srcset="./images/slider/desktop-slider.jpg 1x, ./images/slider/desktop-slider-2x.jpg 2x"
                 type="image/jpg"
@@ -239,9 +239,9 @@
                 media="(min-width:1320px)"
                 srcset="./images/slider/desktop-slider.webp 1x, ./images/slider/desktop-slider-2x.webp 2x"
                 type="image/webp"
-              /> -->
+              /> 
     <!-- mobile  -->
-    <!-- <source
+     <source
                 media="(max-width:1319px)"
                 srcset="./images/slider/mobile-slider.jpg 1x, ./images/slider/mobile-slider-2x.jpg 2x"
                 type="image/jpg"
@@ -258,16 +258,16 @@
             </svg>
           </div>
         </div>
-      </section> -->
+      </section> 
     <!-- ПОПУЛЯРНІ КАТЕГОРІЇ -->
-    <!-- <section class="section popular-categories">
+    <section class="section popular-categories">
         <div class="container">
           <h2 class="section-title">Популярні категорії</h2>
           <ul class="list list-categories">
             <li class="item-categories">
-              <picture> -->
+              <picture> 
     <!-- desktop  -->
-    <!-- <source
+    <source
                   media="(min-width:1320px)"
                   srcset="
                     ./images/popular-categoris/desktop-beds.png    1x,
@@ -282,9 +282,9 @@
                     ./images/popular-categoris/desktop-beds-2x.webp 2x
                   "
                   type="image/webp"
-                /> -->
+                /> 
     <!-- mobile  -->
-    <!-- <source
+ <source
                   media="(max-width:1319px)"
                   srcset="
                     ./images/popular-categoris/mobile-beds.png    1x,
@@ -752,15 +752,15 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section> 
     <!-- НАЙПОПУЛЯРНІШІ ТОВАРИ -->
-    <section class="section popular-products">
+     <section class="section popular-products">
       <div class="container">
         <div class="title-wrapper">
           <h2 class="section-title">Найпопулярніші товари</h2>
           <a href="#" class="view-all"
             >Дивитись всі
-            <svg class="icon-small icon-all">
+            <svg class="icon-small">
               <use href="./images/sprite.svg#arrowview-all"></use>
             </svg>
           </a>
@@ -768,9 +768,9 @@
         <ul class="list list-products">
           <li class="item-products">
             <a href="#" class="product-card">
-              <picture>
+              <picture> 
                 <!-- desktop  -->
-                <source
+                 <source
                   media="(min-width:1320px)"
                   srcset="
                     ./images/popular-products/desktop-bed-sparta.png    1x,
@@ -785,7 +785,7 @@
                     ./images/popular-products/desktop-bed-sparta-2x.webp 2x
                   "
                   type="image/webp"
-                />
+                /> 
                 <!-- mobile  -->
                 <source
                   media="(max-width:1319px)"
@@ -851,7 +851,6 @@
           <li class="item-products">
             <a href="#" class="product-card">
               <picture>
-                <!-- desktop  -->
                 <source
                   media="(min-width:1320px)"
                   srcset="
@@ -868,7 +867,6 @@
                   "
                   type="image/webp"
                 />
-                <!-- mobile  -->
                 <source
                   media="(max-width:1319px)"
                   srcset="
@@ -930,7 +928,6 @@
           <li class="item-products">
             <a href="#" class="product-card">
               <picture>
-                <!-- desktop     -->
                 <source
                   media="(min-width:1320px)"
                   srcset="
@@ -947,7 +944,6 @@
                   "
                   type="image/webp"
                 />
-                <!-- mobile  -->
                 <source
                   media="(max-width:1319px)"
                   srcset="
@@ -1009,7 +1005,6 @@
           <li class="item-products">
             <a href="#" class="product-card">
               <picture>
-                <!-- desktop  -->
                 <source
                   media="(min-width:1320px)"
                   srcset="
@@ -1026,7 +1021,6 @@
                   "
                   type="image/webp"
                 />
-                <!-- mobile  -->
                 <source
                   media="(max-width:1319px)"
                   srcset="
@@ -1088,7 +1082,6 @@
           <li class="item-products">
             <a href="#" class="product-card">
               <picture>
-                <!-- desktop  -->
                 <source
                   media="(min-width:1319px)"
                   srcset="
@@ -1105,7 +1098,6 @@
                   "
                   type="image/webp"
                 />
-                <!-- mobile  -->
                 <source
                   media="(max-width:1319px)"
                   srcset="
@@ -1168,7 +1160,6 @@
           <li class="item-products">
             <a href="#" class="product-card">
               <picture>
-                <!-- desktop  -->
                 <source
                   media="(min-width:1319px)"
                   srcset="
@@ -1185,7 +1176,6 @@
                   "
                   type="image/webp"
                 />
-                <!-- mobile  -->
                 <source
                   media="(max-width:1319px)"
                   srcset="
@@ -1250,7 +1240,6 @@
           <li class="item-products">
             <a href="#" class="product-card">
               <picture>
-                <!-- desktop -->
                 <source
                   media="(min-width:1320px)"
                   srcset="
@@ -1267,7 +1256,6 @@
                   "
                   type="image/webp"
                 />
-                <!-- mobile  -->
                 <source
                   media="(max-width:1319px)"
                   srcset="
@@ -1329,7 +1317,6 @@
           <li class="item-products">
             <a href="#" class="product-card">
               <picture>
-                <!-- desktop  -->
                 <source
                   media="(min-width:1320px)"
                   srcset="
@@ -1346,7 +1333,6 @@
                   "
                   type="image/webp"
                 />
-                <!-- mobile  -->
                 <source
                   media="(max-width:1319px)"
                   srcset="
@@ -1412,15 +1398,15 @@
           </svg>
           Показати ще товари</button>
       </div>
-    </section>
+    </section> 
     <!-- АКЦІЇ -->
-    <!-- <section class="section shares">
+    <section class="section shares">
         <div class="container">
-          <div class="title-wrapper title-shares">
+          <div class="title-wrapper">
             <h2 class="no-margin section-title">Акції</h2>
             <a href="#" class="view-all"
               >Дивитись всі
-              <svg class="icon-small icon-all">
+              <svg class="icon-small">
                 <use href="./images/sprite.svg#arrowview-all"></use>
               </svg>
             </a>
@@ -1449,9 +1435,9 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section> 
     <!-- ОСТАННІ ВІДГУКИ  -->
-    <!-- <section class="section last-reviews">
+     <section class="section last-reviews">
         <div class="container wrapper-reviews">
           <div>
             <h2 class="section-title">Останні відгуки</h2>
@@ -1594,9 +1580,9 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section> 
     <!-- СВІЖІ СТАТТІ ТА ОСТАННІ НОВИНИ  -->
-    <!-- <section class="section articles-news">
+    <section class="section articles-news">
         <div class="container">
           <div class="title-wrapper">
             <h2 class="no-margin section-title">
@@ -1604,7 +1590,7 @@
             </h2>
             <a href="#" class="read-blog"
               >Читати блог
-              <svg class="icon-small icon-all">
+              <svg class="icon-small">
                 <use href="./images/sprite.svg#arrowview-all"></use>
               </svg>
             </a>
@@ -1685,9 +1671,9 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
     <!-- ПРО: ПЕРЕВАГИ -->
-    <!-- <section class="section about">
+    <section class="section about">
         <div class="container">
           <h2 class="visually-hidden">Про</h2>
           <div class="wrapper-description">
@@ -1748,10 +1734,10 @@
             </ul>
           </section>
         </div>
-      </section> -->
-    <!-- </main> -->
+      </section> 
+     </main> 
     <!-- ФУТЕР -->
-    <!-- <footer class="footer">
+     <footer class="footer">
       <div class="container">
         <div class="wrapper-footer">
           <div class="wrapper-item">
@@ -1983,7 +1969,7 @@
           &#169; KROVATO - Технології сну - 2022. Всі права захищені.
         </p>
       </div>
-    </footer> -->
+    </footer> 
   </body>
 </html>
 
