changed 'icon-header' for mobile screen

--- a/index.html
+++ b/index.html
@@ -150,17 +150,17 @@
               </div>
             </div>
             <div class="header-buttons">
-              <button type="button" class="icon-large obrane">
+              <button type="button" class="obrane">
                 <svg class="icon-header">
                   <use href="./images/sprite.svg#obrane-header"></use>
                 </svg>
               </button>
-              <button type="button" class="icon-large obrane">
+              <button type="button" class="obrane">
                 <svg class="icon-header">
                   <use href="./images/sprite.svg#korzina-heder"></use>
                 </svg>
               </button>
-              <button type="button" class="icon-large obrane basket">
+              <button type="button" class="obrane basket">
                 <svg class="icon-header">
                   <use href="./images/sprite.svg#icon-search"></use>
                 </svg>
