added styles of item-products and elements in it

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </head>
   <body>
     <!-- ХЕДЕР -->
-    <header class="header">
+    <!-- <header class="header">
       <nav class="container header-container">
         <div class="about-help">
           <ul class="list list-about">
@@ -85,9 +85,9 @@
               </li>
             </ul>
           </div>
-        </div>  
+        </div>   -->
     <!-- ДАЛІ БУДЕ ФОРМА- ЯК ДОЙДУ ДО ФОРМ - ТОДІ ЗРОБЛЮ -->
-    <div class="header-bg">
+    <!-- <div class="header-bg">
           <div class="header-middle">
             <button type="button" class="burger-button">
               <svg class="burger-icon">
@@ -122,9 +122,9 @@
                   <use href="./images/sprite.svg#search"></use>
                 </svg>
               </button>
-            </form>  
+            </form>   -->
     <!-- ДАЛЫ ФОРМА-ПОШУК ТОВАРЫВ -->
-     <div class="main-feedback">
+     <!-- <div class="main-feedback">
               <button type="button" class="icon-large icon-button">
                 <svg class="icon-phone">
                   <use href="./images/sprite.svg#telephone"></use>
@@ -221,15 +221,15 @@
         </div>
       </nav>
     </header>
-    <main>  
+    <main>   -->
     <!-- ГЕРОЙ -->
-      <section class="section slider">
+      <!-- <section class="section slider">
         <div class="container">
           <h1 class="visually-hidden">Ліжко хюпер</h1>
           <div class="wrapper-slider">
-            <picture>  
+            <picture>   -->
     <!-- desttop  -->
-     <source
+     <!-- <source
                 media="(min-width:1320px)"
                 srcset="./images/slider/desktop-slider.jpg 1x, ./images/slider/desktop-slider-2x.jpg 2x"
                 type="image/jpg"
@@ -238,9 +238,9 @@
                 media="(min-width:1320px)"
                 srcset="./images/slider/desktop-slider.webp 1x, ./images/slider/desktop-slider-2x.webp 2x"
                 type="image/webp"
-              />  
+              />   -->
     <!-- mobile  -->
-      <source
+      <!-- <source
                 media="(max-width:1319px)"
                 srcset="./images/slider/mobile-slider.jpg 1x, ./images/slider/mobile-slider-2x.jpg 2x"
                 type="image/jpg"
@@ -257,16 +257,16 @@
             </svg>
           </div>
         </div>
-      </section>  
+      </section>   -->
     <!-- ПОПУЛЯРНІ КАТЕГОРІЇ -->
-     <section class="section popular-categories">
+     <!-- <section class="section popular-categories">
         <div class="container">
           <h2 class="section-title">Популярні категорії</h2>
           <ul class="list list-categories">
             <li class="item-categories">
-              <picture>  
+              <picture>   -->
     <!-- desktop  -->
-     <source
+     <!-- <source
                   media="(min-width:1320px)"
                   srcset="
                     ./images/popular-categoris/desktop-beds.png    1x,
@@ -281,9 +281,9 @@
                     ./images/popular-categoris/desktop-beds-2x.webp 2x
                   "
                   type="image/webp"
-                />  
+                />   -->
     <!-- mobile  -->
- <source
+ <!-- <source
                   media="(max-width:1319px)"
                   srcset="
                     ./images/popular-categoris/mobile-beds.png    1x,
@@ -745,7 +745,7 @@
             </li>
           </ul>
         </div>
-      </section>  
+      </section>   -->
     <!-- НАЙПОПУЛЯРНІШІ ТОВАРИ -->
       <section class="section popular-products">
       <div class="container">
@@ -1387,7 +1387,7 @@
       </div>
     </section> 
     <!-- АКЦІЇ -->
-    <section class="section shares">
+    <!-- <section class="section shares">
         <div class="container">
           <div class="title-wrapper">
             <h2 class="section-title">Акції</h2>
@@ -1422,9 +1422,9 @@
             </li>
           </ul>
         </div>
-      </section> 
+      </section>  -->
     <!-- ОСТАННІ ВІДГУКИ  -->
-     <section class="section last-reviews">
+     <!-- <section class="section last-reviews">
         <div class="container wrapper-reviews">
           <div>
             <h2 class="section-title">Останні відгуки</h2>
@@ -1567,9 +1567,9 @@
             </li>
           </ul>
         </div>
-      </section>  
+      </section>   -->
     <!-- СВІЖІ СТАТТІ ТА ОСТАННІ НОВИНИ  -->
-    <section class="section articles-news">
+    <!-- <section class="section articles-news">
         <div class="container">
           <div class="title-wrapper">
             <h2 class="section-title">
@@ -1658,9 +1658,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
     <!-- ПРО: ПЕРЕВАГИ -->
-     <section class="section about">
+     <!-- <section class="section about">
         <div class="container">
           <h2 class="visually-hidden">Про</h2>
           <div class="wrapper-description">
@@ -1722,9 +1722,9 @@
           </section>
         </div>
       </section>  
-     </main> 
+     </main>  -->
     <!-- ФУТЕР -->
-      <footer class="footer">
+      <!-- <footer class="footer">
       <div class="container">
         <div class="wrapper-footer">
           <div class="wrapper-item">
@@ -1956,7 +1956,7 @@
           &#169; KROVATO - Технології сну - 2022. Всі права захищені.
         </p>
       </div>
-    </footer>
+    </footer> -->
   </body>
 </html>
 
