changed "shares" of mobile screen

--- a/index.html
+++ b/index.html
@@ -747,7 +747,7 @@
         </div>
       </section>   -->
     <!-- НАЙПОПУЛЯРНІШІ ТОВАРИ -->
-      <section class="section popular-products">
+      <!-- <section class="section popular-products">
       <div class="container">
         <div class="title-wrapper">
           <h2 class="section-title">Найпопулярніші товари</h2>
@@ -755,9 +755,9 @@
         <ul class="list list-products">
           <li class="item-products">
             <a href="#" class="product-card">
-              <picture>  
+              <picture>   -->
                 <!-- desktop  -->
-                  <source
+                  <!-- <source
                   media="(min-width:1320px)"
                   srcset="
                     ./images/popular-products/desktop-bed-sparta.png    1x,
@@ -772,9 +772,9 @@
                     ./images/popular-products/desktop-bed-sparta-2x.webp 2x
                   "
                   type="image/webp"
-                />  
+                />   -->
                 <!-- mobile  -->
-                <source
+                <!-- <source
                   media="(max-width:1319px)"
                   srcset="
                     ./images/popular-products/mobile-bed-sparta.png    1x,
@@ -1385,9 +1385,9 @@
           </svg>
           Показати ще товари</button>
       </div>
-    </section> 
+    </section>  -->
     <!-- АКЦІЇ -->
-    <!-- <section class="section shares">
+    <section class="section shares">
         <div class="container">
           <div class="title-wrapper">
             <h2 class="section-title">Акції</h2>
@@ -1421,8 +1421,11 @@
               /></a>
             </li>
           </ul>
+          <svg class="icon-mob">
+            <use href="./images/sprite.svg#points-shares-mob"></use>
+          </svg>
         </div>
-      </section>  -->
+      </section>  
     <!-- ОСТАННІ ВІДГУКИ  -->
      <!-- <section class="section last-reviews">
         <div class="container wrapper-reviews">
