added anothers photos and changed section shares for mob and desk screens

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
               </button>
             </form>   -->
     <!-- ДАЛЫ ФОРМА-ПОШУК ТОВАРЫВ -->
-     <!-- <div class="main-feedback">
+    <!-- <div class="main-feedback">
               <button type="button" class="icon-large icon-button">
                 <svg class="icon-phone">
                   <use href="./images/sprite.svg#telephone"></use>
@@ -223,13 +223,13 @@
     </header>
     <main>   -->
     <!-- ГЕРОЙ -->
-      <!-- <section class="section slider">
+    <!-- <section class="section slider">
         <div class="container">
           <h1 class="visually-hidden">Ліжко хюпер</h1>
           <div class="wrapper-slider">
             <picture>   -->
     <!-- desttop  -->
-     <!-- <source
+    <!-- <source
                 media="(min-width:1320px)"
                 srcset="./images/slider/desktop-slider.jpg 1x, ./images/slider/desktop-slider-2x.jpg 2x"
                 type="image/jpg"
@@ -240,7 +240,7 @@
                 type="image/webp"
               />   -->
     <!-- mobile  -->
-      <!-- <source
+    <!-- <source
                 media="(max-width:1319px)"
                 srcset="./images/slider/mobile-slider.jpg 1x, ./images/slider/mobile-slider-2x.jpg 2x"
                 type="image/jpg"
@@ -259,14 +259,14 @@
         </div>
       </section>   -->
     <!-- ПОПУЛЯРНІ КАТЕГОРІЇ -->
-     <!-- <section class="section popular-categories">
+    <!-- <section class="section popular-categories">
         <div class="container">
           <h2 class="section-title">Популярні категорії</h2>
           <ul class="list list-categories">
             <li class="item-categories">
               <picture>   -->
     <!-- desktop  -->
-     <!-- <source
+    <!-- <source
                   media="(min-width:1320px)"
                   srcset="
                     ./images/popular-categoris/desktop-beds.png    1x,
@@ -283,7 +283,7 @@
                   type="image/webp"
                 />   -->
     <!-- mobile  -->
- <!-- <source
+    <!-- <source
                   media="(max-width:1319px)"
                   srcset="
                     ./images/popular-categoris/mobile-beds.png    1x,
@@ -747,7 +747,7 @@
         </div>
       </section>   -->
     <!-- НАЙПОПУЛЯРНІШІ ТОВАРИ -->
-      <!-- <section class="section popular-products">
+    <!-- <section class="section popular-products">
       <div class="container">
         <div class="title-wrapper">
           <h2 class="section-title">Найпопулярніші товари</h2>
@@ -756,8 +756,8 @@
           <li class="item-products">
             <a href="#" class="product-card">
               <picture>   -->
-                <!-- desktop  -->
-                  <!-- <source
+    <!-- desktop  -->
+    <!-- <source
                   media="(min-width:1320px)"
                   srcset="
                     ./images/popular-products/desktop-bed-sparta.png    1x,
@@ -773,8 +773,8 @@
                   "
                   type="image/webp"
                 />   -->
-                <!-- mobile  -->
-                <!-- <source
+    <!-- mobile  -->
+    <!-- <source
                   media="(max-width:1319px)"
                   srcset="
                     ./images/popular-products/mobile-bed-sparta.png    1x,
@@ -1388,46 +1388,97 @@
     </section>  -->
     <!-- АКЦІЇ -->
     <section class="section shares">
-        <div class="container">
-          <div class="title-wrapper">
-            <h2 class="section-title">Акції</h2>
-            <a href="#" class="view-all"
-              >Дивитись всі
-              <svg class="icon-small">
-                <use href="./images/sprite.svg#arrowview-all"></use>
-              </svg>
-            </a>
-          </div>
-          <ul class="list list-shares">
-            <li class="item-shares">
-              <a href="#"
-                ><img
-                  src="./images/shares/akciya(літній-розпродаж).jpg"
-                  alt="акція-літній розпродаж"
-              /></a>
-            </li>
-            <li class="item-shares">
-              <a href="#"
-                ><img
-                  src="./images/shares/akciya(диванний-цінопад).jpg"
-                  alt="акція-диванний цінопад"
-              /></a>
-            </li>
-            <li class="item-shares">
-              <a href="#"
-                ><img
-                  src="./images/shares/akciya(королівські-скидки).jpg"
-                  alt="акція-королівські скидки"
-              /></a>
-            </li>
-          </ul>
-          <svg class="icon-mob">
-            <use href="./images/sprite.svg#points-shares-mob"></use>
-          </svg>
+      <div class="container">
+        <div class="title-wrapper">
+          <h2 class="section-title">Акції</h2>
+          <a href="#" class="view-all"
+            >Дивитись всі
+            <svg class="icon-small">
+              <use href="./images/sprite.svg#arrowview-all"></use>
+            </svg>
+          </a>
         </div>
-      </section>  
+        <ul class="list list-shares">
+          <li class="item-shares">
+            <a href="#">
+              <picture>
+                <source
+                  srcset="
+                    ./images/shares/akciya-summer-sale.jpg    1x,
+                    ./images/shares/akciya-summer-sale-2x.jpg 2x
+                  "
+                  type="image/jpg"
+                />
+                <source
+                  srcset="
+                    ./images/shares/akciya-summer-sale.webp    1x,
+                    ./images/shares/akciya-summer-sale-2x.webp 2x
+                  "
+                  type="image/webp"
+                />
+                <img
+                  src="./images/shares/akciya-summer-sale.jpg"
+                  alt="акція-літній розпродаж"
+                />
+              </picture>
+            </a>
+          </li>
+          <li class="item-shares">
+            <a href="#">
+              <picture>
+                <source
+                  srcset="
+                    ./images/shares/akciya-sofa-price.jpg    1x,
+                    ./images/shares/akciya-sofa-price-2x.jpg 2x
+                  "
+                  type="image/jpg"
+                />
+                <source
+                  srcset="
+                    ./images/shares/akciya-sofa-price.webp    1x,
+                    ./images/shares/akciya-sofa-price-2x.webp 2x
+                  "
+                  type="image/webp"
+                />
+                <img
+                  src="./images/shares/akciya-sofa-price.jpg"
+                  alt="акція-диванний цінопад"
+                />
+              </picture>
+            </a>
+          </li>
+          <li class="item-shares">
+            <a href="#"></a>
+              <picture>
+                <source
+                  srcset="
+                    ./images/shares/akciya-royal-discounts.jpg    1x,
+                    ./images/shares/akciya-royal-discounts-2x.jpg 2x
+                  "
+                  type="image/jpg"
+                />
+                <source
+                  srcset="
+                    ./images/shares/akciya-royal-discounts.webp    1x,
+                    ./images/shares/akciya-royal-discounts-2x.webp 2x
+                  "
+                  type="image/webp"
+                />
+                <img
+                  src="./images/shares/akciya-royal-discounts.jpg"
+                  alt="акція королівські знижки"
+                />
+              </picture>
+            </a>
+          </li>
+        </ul>
+        <svg class="icon-mob">
+          <use href="./images/sprite.svg#points-shares-mob"></use>
+        </svg>
+      </div>
+    </section>
     <!-- ОСТАННІ ВІДГУКИ  -->
-     <!-- <section class="section last-reviews">
+    <!-- <section class="section last-reviews">
         <div class="container wrapper-reviews">
           <div>
             <h2 class="section-title">Останні відгуки</h2>
@@ -1663,7 +1714,7 @@
         </div>
       </section> -->
     <!-- ПРО: ПЕРЕВАГИ -->
-     <!-- <section class="section about">
+    <!-- <section class="section about">
         <div class="container">
           <h2 class="visually-hidden">Про</h2>
           <div class="wrapper-description">
@@ -1727,7 +1778,7 @@
       </section>  
      </main>  -->
     <!-- ФУТЕР -->
-      <!-- <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container">
         <div class="wrapper-footer">
           <div class="wrapper-item">
