changed section 'last-reviews' for adaptive layout

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&display=swap"
       rel="stylesheet"
     />
     <link
@@ -259,14 +259,14 @@
         </div>
       </section>   -->
     <!-- ПОПУЛЯРНІ КАТЕГОРІЇ -->
-    <section class="section popular-categories">
+    <!-- <section class="section popular-categories">
       <div class="container">
         <h2 class="section-title">Популярні категорії</h2>
         <ul class="list list-categories">
           <li class="item-categories">
-            <picture>
-              <!-- desktop  -->
-              <!-- <source
+            <picture> -->
+    <!-- desktop  -->
+    <!-- <source
                   media="(min-width:1320px)"
                   srcset="
                     ./images/popular-categoris/desktop-beds.png    1x,
@@ -282,8 +282,8 @@
                   "
                   type="image/webp"
                 />   -->
-              <!-- mobile  -->
-              <source
+    <!-- mobile  -->
+    <!-- <source
                 media="(max-width:1319px)"
                 srcset="
                   ./images/popular-categoris/mobile-beds.png    1x,
@@ -742,9 +742,9 @@
           </li>
         </ul>
       </div>
-    </section>
+    </section> -->
     <!-- НАЙПОПУЛЯРНІШІ ТОВАРИ -->
-    <section class="section popular-products">
+    <!-- <section class="section popular-products">
       <div class="container">
         <div class="title-wrapper">
           <h2 class="section-title">Найпопулярніші товари</h2>
@@ -752,9 +752,9 @@
         <ul class="list list-products">
           <li class="item-products">
             <a href="#" class="product-card">
-              <picture>
-                <!-- desktop  -->
-                <source
+              <picture> -->
+    <!-- desktop  -->
+    <!-- <source
                   media="(min-width:1320px)"
                   srcset="
                     ./images/popular-products/desktop-bed-sparta.png    1x,
@@ -769,9 +769,9 @@
                     ./images/popular-products/desktop-bed-sparta-2x.webp 2x
                   "
                   type="image/webp"
-                />
-                <!-- mobile  -->
-                <source
+                /> -->
+    <!-- mobile  -->
+    <!-- <source
                   media="(max-width:1319px)"
                   srcset="
                     ./images/popular-products/mobile-bed-sparta.png    1x,
@@ -1383,7 +1383,7 @@
           Показати ще товари
         </button>
       </div>
-    </section>
+    </section> -->
     <!-- АКЦІЇ -->
     <!-- <section class="section shares">
       <div class="container">
@@ -1478,7 +1478,7 @@
     <!-- ОСТАННІ ВІДГУКИ  -->
     <section class="section last-reviews">
       <div class="container wrapper-reviews">
-        <div>
+        <div class="wrapper-logo-rating">
           <h2 class="section-title">Останні відгуки</h2>
           <div class="logo-rating">
             <a href="#" class="logo-link">
@@ -1501,19 +1501,18 @@
             <svg class="icon-review" width="24" height="24">
               <use href="./images/sprite.svg#write-review"></use>
             </svg>
-            Написати відгук
-          </button>
-          <a href="#" class="all-reviews">
+            Написати відгук</button
+          ><a href="#" class="all-reviews">
             <svg class="icon-small icon-reviews">
               <use href="./images/sprite.svg#all-reviews"></use>
             </svg>
             Всі відгуки</a
           >
         </div>
-        <ul class="list list-reviews">
+         <ul class="list list-reviews">
           <li class="item-reviews">
             <div class="name-date">
-              <button type="button" class="icon-large button-avatar">
+              <button type="button" class="button-avatar">
                 <svg class="icon-avatar">
                   <use href="./images/sprite.svg#avatar"></use>
                 </svg>
@@ -1559,14 +1558,13 @@
                 alt="товар"
                 width="50"
                 height="50"
-                class="img-tovar"
-              />
+                              />
               Диван Orange-Line Родео SF ...</a
             >
           </li>
           <li class="item-reviews">
             <div class="name-date">
-              <button type="button" class="icon-large button-avatar">
+              <button type="button" class="button-avatar">
                 <svg class="icon-avatar">
                   <use href="./images/sprite.svg#avatar"></use>
                 </svg>
@@ -1610,12 +1608,14 @@
                 alt="товар"
                 width="50"
                 height="50"
-                class="img-tovar"
-              />
+                              />
               Диван Orange-Line Родео SF ...</a
             >
           </li>
-        </ul>
+        </ul> 
+        <svg class="icon-mob">
+          <use href="./images/sprite.svg#points-shares-mob"></use>
+        </svg>
       </div>
     </section>
     <!-- СВІЖІ СТАТТІ ТА ОСТАННІ НОВИНИ  -->
