changed display of .title-wrapper, removed padding of view-all, added display (none) to .read-blog

--- a/index.html
+++ b/index.html
@@ -744,17 +744,22 @@
       </div>
     </section> -->
     <!-- НАЙПОПУЛЯРНІШІ ТОВАРИ -->
-    <!-- <section class="section popular-products">
+    <section class="section popular-products">
       <div class="container">
         <div class="title-wrapper">
           <h2 class="section-title">Найпопулярніші товари</h2>
+          <a href="#" class="view-all"
+          >Дивитись всі
+          <svg class="icon-small">
+            <use href="./images/sprite.svg#arrowview-all"></use>
+          </svg>
+        </a>
         </div>
         <ul class="list list-products">
           <li class="item-products">
             <a href="#" class="product-card">
-              <picture> -->
-    <!-- desktop  -->
-    <!-- <source
+              <picture>
+                <source
                   media="(min-width:1320px)"
                   srcset="
                     ./images/popular-products/desktop-bed-sparta.png    1x,
@@ -769,9 +774,8 @@
                     ./images/popular-products/desktop-bed-sparta-2x.webp 2x
                   "
                   type="image/webp"
-                /> -->
-    <!-- mobile  -->
-    <!-- <source
+                />
+                <source
                   media="(max-width:1319px)"
                   srcset="
                     ./images/popular-products/mobile-bed-sparta.png    1x,
@@ -1383,9 +1387,9 @@
           Показати ще товари
         </button>
       </div>
-    </section> -->
+    </section>
     <!-- АКЦІЇ -->
-    <!-- <section class="section shares">
+    <section class="section shares">
       <div class="container">
         <div class="title-wrapper">
           <h2 class="section-title">Акції</h2>
@@ -1446,7 +1450,7 @@
             </a>
           </li>
           <li class="item-shares">
-            <a href="#"></a>
+            <a href="#">
               <picture>
                 <source
                   srcset="
@@ -1474,9 +1478,9 @@
           <use href="./images/sprite.svg#points-shares-mob"></use>
         </svg>
       </div>
-    </section> -->
+    </section>
     <!-- ОСТАННІ ВІДГУКИ  -->
-    <section class="section last-reviews">
+    <!-- <section class="section last-reviews">
       <div class="container wrapper-reviews">
         <div class="wrapper-logo-rating">
           <h2 class="section-title">Останні відгуки</h2>
@@ -1617,34 +1621,32 @@
           <use href="./images/sprite.svg#points-shares-mob"></use>
         </svg>
       </div>
-    </section>
+    </section> -->
     <!-- СВІЖІ СТАТТІ ТА ОСТАННІ НОВИНИ  -->
-    <!-- <section class="section articles-news">
-        <div class="container">
-          <div class="title-wrapper">
-            <h2 class="section-title">
-              Свіжі статті та останні новини
-            </h2>
-            <a href="#" class="read-blog"
-              >Читати блог
-              <svg class="icon-small">
-                <use href="./images/sprite.svg#arrowview-all"></use>
+    <section class="section articles-news">
+      <div class="container">
+        <div class="title-wrapper">
+          <h2 class="section-title">Свіжі статті та останні новини</h2>
+          <a href="#" class="read-blog"
+            >Читати блог
+            <svg class="icon-small">
+              <use href="./images/sprite.svg#arrowview-all"></use>
+            </svg>
+          </a>
+          <div class="wrapper-arrow">
+            <button type="button" class="button-news">
+              <svg width="60" height="60">
+                <use href="./images/sprite.svg#arrow-left"></use>
               </svg>
-            </a>
-            <div class="wrapper-arrow">
-              <button type="button" class="button-news">
-                <svg width="60" height="60">
-                  <use href="./images/sprite.svg#arrow-left"></use>
-                </svg>
-              </button>
-              <button type="button" class="button-news">
-                <svg width="60" height="60">
-                  <use href="./images/sprite.svg#arrow-right"></use>
-                </svg>
-              </button>
-            </div>
+            </button>
+            <button type="button" class="button-news">
+              <svg width="60" height="60">
+                <use href="./images/sprite.svg#arrow-right"></use>
+              </svg>
+            </button>
           </div>
-          <ul class="list list-articles">
+        </div>
+        <ul class="list list-articles">
             <li class="item-articles">
               <div class="wrapper-img">
                 <img
@@ -1707,8 +1709,8 @@
               </div>
             </li>
           </ul>
-        </div>
-      </section> -->
+      </div>
+    </section>
     <!-- ПРО: ПЕРЕВАГИ -->
     <!-- <section class="section about">
         <div class="container">
