added changes for articles-news

--- a/index.html
+++ b/index.html
@@ -1662,7 +1662,7 @@
                 </p>
                 <a href="#" class="link-detail"
                   >Детальніше
-                  <svg class="icon-small icon-detail">
+                  <svg class="icon-small">
                     <use href="./images/sprite.svg#arrowview-all"></use>
                   </svg>
                 </a>
@@ -1682,7 +1682,7 @@
                 </p>
                 <a href="#" class="link-detail"
                   >Детальніше
-                  <svg class="icon-small icon-detail">
+                  <svg class="icon-small">
                     <use href="./images/sprite.svg#arrowview-all"></use>
                   </svg>
                 </a>
@@ -1702,7 +1702,7 @@
                 </p>
                 <a href="#" class="link-detail"
                   >Детальніше
-                  <svg class="icon-small icon-detail">
+                  <svg class="icon-small">
                     <use href="./images/sprite.svg#arrowview-all"></use>
                   </svg>
                 </a>
